--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "jeroennoten/laravel-adminlte": "^3.9",
         "laravel/framework": "^9.0",
         "laravel/sanctum": "^2.14",
+        "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.7",
         "laravel/ui": "^4.2"
     },
