--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0",
+        "barryvdh/laravel-dompdf": "^2.0",
         "fruitcake/laravel-cors": "^2.0.5",
         "guzzlehttp/guzzle": "^7.2",
         "jeroennoten/laravel-adminlte": "^3.9",
@@ -13,7 +14,8 @@
         "laravel/sanctum": "^2.14",
         "laravel/telescope": "^4.17",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "twbs/bootstrap": "v4.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
